--- a/ChatApp_1to1/app/src/main/res/values/strings.xml
+++ b/ChatApp_1to1/app/src/main/res/values/strings.xml
@@ -52,4 +52,16 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+
+    <!-- 식물 관리 화면 문자열 -->
+    <string name="plant_care_title">식물 관리</string>
+    <string name="menu">메뉴</string>
+    <string name="water">물</string>
+    <string name="sunlight">햇빛</string>
+    <string name="nutrient">영양제</string>
+    <string name="more">꾸미기</string>
+    <string name="water_message">물을 주었습니다!</string>
+    <string name="sunlight_message">햇빛을 쬐었습니다!</string>
+    <string name="nutrient_message">영양제를 주었습니다!</string>
+    <string name="more_message">추가 기능을 선택하세요</string>
 </resources>
