--- a/ChatApp_1to1/app/src/main/res/values/strings.xml
+++ b/ChatApp_1to1/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ChatApp_1to1</string>
+    <string name="app_name">LoveGarden</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
